fixed graphic glitch on safari

--- a/whiletranspiler/web_client/static/css/general.css
+++ b/whiletranspiler/web_client/static/css/general.css
@@ -163,6 +163,7 @@ main > .row > .col:first-child {
     overflow: hidden;
     flex-grow: 1;
     padding: 0px;
+    height: 100%;
 }
 
 #results-tabs .tab-content .progress {
